--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -1,23 +1,49 @@
 <header class="header">
-  <div class="container">
-    <nav class="navigation">
+  <div class="menu-block">
+    <div class="container">
+      <nav class="navigation">
         <h1 class="site-title">
-      <a href="#" class="logo"><img src="../images/logo.png" alt="logotype" class="logo__img"/></a>
-    </h1>
-      <ul class="menu__list">
-          <li class="menu-list__item"><a href="#" class="menu-list__link">home</a></li>
-          <li class="menu-list__item"><a href="#" class="menu-list__link">features</a></li>
-          <li class="menu-list__item"><a href="#" class="menu-list__link">team</a></li>
-          <li class="menu-list__item"><a href="#" class="menu-list__link">testimonials</a></li>
-          <li class="menu-list__item"><a href="#" class="menu-list__link">contact</a></li>
-      </ul>
-      <button type="button" class="burger"></button>
-    </nav>
-<h2 class="header-title">Introducing Mobileapp</h2>
-<p class="subtitle">Maecenas vitae tellus sapien. Praesent </p>
-<p class="header__item-text">> semper scelerisque tristique a enim</p>
-<p class="header__item-text">> Integer ut mattis nulla, eget vehicula elit </p>
-<p class="header__item-text">> Praesent rutrum ac nunc et </p>
-<button class="download">Download</button>
+          <a href="#" class="logo link"
+            ><img src="./images/logo.svg" alt="logotype" class="logo__img"
+          /></a>
+        </h1>
+        <ul class="menu__list list">
+          <li class="menu-list__item">
+            <a href="#" class="menu-list__link link">home</a>
+          </li>
+          <li class="menu-list__item">
+            <a href="#" class="menu-list__link link">features</a>
+          </li>
+          <li class="menu-list__item">
+            <a href="#" class="menu-list__link link">team</a>
+          </li>
+          <li class="menu-list__item">
+            <a href="#" class="menu-list__link link">testimonials</a>
+          </li>
+          <li class="menu-list__item">
+            <a href="#" class="menu-list__link link">contact</a>
+          </li>
+        </ul>
+        <button type="button" class="burger btn"></button>
+      </nav>
+    </div>
+  </div>
+  <div class="context-header">
+    <div class="container">
+      <h2 class="header-title">Introducing Mobileapp</h2>
+      <p class="subtitle">
+        Maecenas vitae tellus <span class="block-line"> sapien. Praesent</span>
+      </p>
+      <p class="context-header__item-text">
+        semper scelerisque tristique a enim
+      </p>
+      <p class="context-header__item-text">
+        Integer ut mattis nulla, eget vehicula elit
+      </p>
+      <p class="context-header__item-text">Praesent rutrum ac nunc et</p>
+      <button class="download btn">Download</button>
+      <img srcset="./images/phone@1x.png 303w, ./images/phone@2x.png 606w" sizes="303px" height="445" src="../images/phone@1x.png" alt="phone" class="phone">
+
+    </div>
   </div>
 </header>
