--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -2,11 +2,9 @@
   <div class="menu-block">
     <div class="container">
       <nav class="navigation">
-        <h1 class="site-title">
           <a href="#" class="logo link"
             ><img src="./images/logo.svg" alt="logotype" class="logo__img"
           /></a>
-        </h1>
         <ul class="menu__list list">
           <li class="menu-list__item">
             <a href="#" class="menu-list__link link">home</a>
@@ -30,7 +28,7 @@
   </div>
   <div class="context-header">
     <div class="container">
-      <h2 class="header-title">Introducing Mobileapp</h2>
+      <h1 class="header-title">Introducing Mobileapp</h1>
       <p class="subtitle">
         Maecenas vitae tellus <span class="block-line"> sapien. Praesent</span>
       </p>
@@ -42,8 +40,14 @@
       </p>
       <p class="context-header__item-text">Praesent rutrum ac nunc et</p>
       <button class="download btn">Download</button>
-      <img srcset="./images/phone@1x.png 303w, ./images/phone@2x.png 606w" sizes="303px" height="445" src="../images/phone@1x.png" alt="phone" class="phone">
-
+      <img
+        srcset="./images/phone@1x.png 303w, ./images/phone@2x.png 606w"
+        sizes="303px"
+        height="445"
+        src="../images/phone@1x.png"
+        alt="phone"
+        class="phone"
+      />
     </div>
   </div>
 </header>
