--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+      //= ./html/sections/watch-video.html
+      //= ./html/sections/footer.html
+
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
