fixed some mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
   <body>
       //= ./html/sections/watch-video.html
+      //= ./html/sections/team.html
+      //= ./html/sections/feedback.html
       //= ./html/sections/footer.html
 
     <script src="js/scripts.min.js"></script>
