--- a/src/html/sections/team.html
+++ b/src/html/sections/team.html
@@ -26,7 +26,7 @@
                                         <a href="#" class="icon-facebook">
                                             <span class="visually-hidden">Twitter</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                                <use href="./images/sprite-social.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -36,7 +36,7 @@
                                         <a href="#" class="icon-twitter">
                                             <span class="visually-hidden">Facebook</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                                <use href="./images/sprite-social.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -46,7 +46,7 @@
                                         <a href="#" class="icon-instagram">
                                             <span class="visually-hidden">Instagram</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                                <use href="./images/sprite-social.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -81,7 +81,7 @@
                                         <a href="#" class="icon-facebook">
                                             <span class="visually-hidden">Twitter</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                                <use href="./images/sprite-social.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -91,7 +91,7 @@
                                         <a href="#" class="icon-twitter">
                                             <span class="visually-hidden">Facebook</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                                <use href="./images/sprite-social.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -101,7 +101,7 @@
                                         <a href="#" class="icon-instagram">
                                             <span class="visually-hidden">Instagram</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                                <use href="./images/sprite-social.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -137,7 +137,7 @@
                                         <a href="#" class="icon-facebook">
                                             <span class="visually-hidden">Twitter</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                                <use href="./images/sprite-social.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -147,7 +147,7 @@
                                         <a href="#" class="icon-twitter">
                                             <span class="visually-hidden">Facebook</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                                <use href="./images/sprite-social.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -157,7 +157,7 @@
                                         <a href="#" class="icon-instagram">
                                             <span class="visually-hidden">Instagram</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                                <use href="./images/sprite-social.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -192,7 +192,7 @@
                                         <a href="#" class="icon-facebook">
                                             <span class="visually-hidden">Twitter</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                                <use href="./images/sprite-social.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -202,7 +202,7 @@
                                         <a href="#" class="icon-twitter">
                                             <span class="visually-hidden">Facebook</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                                <use href="./images/sprite-social.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </div>
@@ -212,7 +212,7 @@
                                         <a href="#" class="icon-instagram">
                                             <span class="visually-hidden">Instagram</span>
                                             <svg class="team__list-socials-svg">
-                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                                <use href="./images/sprite-social.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </div>
