--- a/src/html/sections/watch-video.html
+++ b/src/html/sections/watch-video.html
@@ -6,7 +6,7 @@
   <ul class="social-list">
     <li class="social-list__item"><a href="#" class="social-list__link">
         <svg class="icon-svg">
-          <use href="../images/sprite.svg#icon-apple"></use>
+          <use href="./images/sprite.svg#icon-apple"></use>
         </svg>
       </a></li>
     <li class="social-list__item"><a href="#" class="social-list__link">
