changed img path

--- a/src/html/sections/watch-video.html
+++ b/src/html/sections/watch-video.html
@@ -11,13 +11,13 @@
       </a></li>
     <li class="social-list__item"><a href="#" class="social-list__link">
         <svg class="icon-svg">
-          <use href="../images/sprite.svg#icon-android"></use>
+          <use href="./images/sprite.svg#icon-android"></use>
         </svg>
       </a></li>
   </ul></div>
   <div class="section-video-container">
     <video class="section-video"  preload="metadata" poster="../images/poster-desk.jpg" controls>
-      <source src="../images/video-watch.mp4" type="video/mp4">
+      <source src="./images/video-watch.mp4" type="video/mp4">
     </video>
 
   </div></div>
