--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
     <div class="container"><h2 class="footer-title">Contact us</h2>
     <div class="contact-section-wrapper"><form action="#">
         <input type="text" placeholder="Name">
