--- a/src/html/sections/header.html
+++ b/src/html/sections/header.html
@@ -7,19 +7,19 @@
           /></a>
         <ul class="menu__list list">
           <li class="menu-list__item">
-            <a href="#" class="menu-list__link link">home</a>
+            <a href="#"  class="menu-list__link link">home</a>
           </li>
           <li class="menu-list__item">
-            <a href="#" class="menu-list__link link">features</a>
+            <a href="#features" class="menu-list__link link">features</a>
           </li>
           <li class="menu-list__item">
-            <a href="#" class="menu-list__link link">team</a>
+            <a href="#team" class="menu-list__link link">team</a>
           </li>
           <li class="menu-list__item">
             <a href="#" class="menu-list__link link">testimonials</a>
           </li>
           <li class="menu-list__item">
-            <a href="#" class="menu-list__link link">contact</a>
+            <a href="#contacts"  class="menu-list__link link">contact</a>
           </li>
         </ul>
         <button type="button" class="burger btn"></button>
