--- a/src/html/sections/team.html
+++ b/src/html/sections/team.html
@@ -1,4 +1,4 @@
-<section class="team">
+<section class="team" id="team">
     <div class="container">
         <div class="team__title-wrapper">
             <h2 class="team__title"> our team </h2>
