--- a/src/html/sections/features.html
+++ b/src/html/sections/features.html
@@ -1,4 +1,4 @@
-<section class="features">
+<section class="features" id="features">
   <div class="container">
     <h2 class="features__title">
       key features
