--- a/src/html/sections/watch-video.html
+++ b/src/html/sections/watch-video.html
@@ -16,7 +16,7 @@
       </a></li>
   </ul></div>
   <div class="section-video-container">
-    <video class="section-video"  preload="metadata" poster="../images/poster-desk.jpg" controls>
+    <video class="section-video"  preload="metadata" poster="./images/poster-desk.jpg" controls>
       <source src="./images/video-watch.mp4" type="video/mp4">
     </video>
 
